# barkanoid

./: CMakeLists.txt  README.md  build.sh
data/: scores.cfg
include/Collision/: AABBCollider.hpp  Collider.hpp  Collision.hpp  ListCollider.hpp
include/Engine/: AssetManager.hpp  AudioManager.hpp  G.hpp  Game.hpp  GameObject.hpp  IUpdatable.hpp  Input.hpp  State.hpp  Transform.hpp
include/Game/: Barkanoid.hpp
include/Game/Entities/: Ball.hpp  GameArea.hpp  Level.hpp  Paddle.hpp  ParticleEmitter.hpp  Stage.hpp  UI.hpp  Wall.hpp
include/Game/States/: LevelEditState.hpp  LevelSelectState.hpp  MenuState.hpp  PlayState.hpp  StageEditState.hpp
include/Graphics/: Graphic.hpp  SlicedGraphic.hpp
include/UI/: Alignment.hpp  Button.hpp  MultilineText.hpp  TextField.hpp  UIObject.hpp  VerticalScrollArea.hpp
include/Util/: Ease.hpp  FileIO.hpp  Log.hpp  MacroDefinitions.hpp  Math.hpp  Random.hpp  StringUtil.hpp  Tween.hpp  VectorUtil.hpp  WeightedVector.hpp
res/graphics/: ball.ase  brick.ase  brick2x.ase  paddle.ase  pointTreat.ase  powerup.ase  powerup2x.ase  wall.ase
res/levels/: level1.lvl  level2.lvl
src/Collision/: AABBCollider.cpp  Collider.cpp  Collision.cpp  ListCollider.cpp
src/Engine/: AssetManager.cpp  AudioManager.cpp  G.cpp  Game.cpp  GameObject.cpp  Input.cpp  State.cpp
src/Game/: Barkanoid.cpp  Main.cpp
src/Graphics/: Graphic.cpp  SlicedGraphic.cpp
src/UI/: Button.cpp  MultilineText.cpp  TextField.cpp  UIObject.cpp  VerticalScrollArea.cpp
src/Util/: Ease.cpp  FileIO.cpp  Log.cpp  Random.cpp  StringUtil.cpp  Tween.cpp
(+47 files in other folders)
